// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`balAddrToBanAddr > should not consider as Ban Address 1`] = `undefined`;

exports[`balAddrToBanAddr > should return BanAddress with BanID and BanTopoID 1`] = `
{
  "certified": true,
  "districtID": undefined,
  "id": "aaaaaaaa-0000-4aaa-9000-1234567890aa",
  "mainCommonToponymID": "bbbbbbbb-0000-4aaa-9000-1234567890bb",
  "meta": {
    "idfix": {
      "hash": "55450a7f0463128ae6cb77f5ae0410ae",
    },
  },
  "number": 1,
  "positions": [
    {
      "geometry": {
        "coordinates": [
          1,
          2,
        ],
        "type": "Point",
      },
      "type": "entrance",
    },
  ],
  "secondaryCommonToponymIDs": undefined,
  "updateDate": 2021-01-01T00:00:00.000Z,
}
`;

exports[`balAddrToBanAddr > should return BanAddress with BanID without BanTopoID 1`] = `
{
  "certified": true,
  "districtID": undefined,
  "id": "aaaaaaaa-0000-4aaa-9000-1234567890aa",
  "mainCommonToponymID": undefined,
  "meta": {
    "idfix": {
      "hash": "dea5e71a883c27a7e2bbd4735d9de42a",
    },
  },
  "number": 1,
  "positions": [
    {
      "geometry": {
        "coordinates": [
          1,
          2,
        ],
        "type": "Point",
      },
      "type": "entrance",
    },
  ],
  "secondaryCommonToponymIDs": undefined,
  "updateDate": 2021-01-01T00:00:00.000Z,
}
`;

exports[`balAddrToBanAddr > should return BanAddress with BanID, BanTopoID, other toponyms and BanDistrictID 1`] = `
{
  "certified": true,
  "districtID": "dddddddd-0000-4aaa-9000-1234567890ff",
  "id": "aaaaaaaa-0000-4aaa-9000-1234567890aa",
  "mainCommonToponymID": "bbbbbbbb-0000-4aaa-9000-1234567890bb",
  "meta": {
    "idfix": {
      "hash": "233f7091064934fa8a927b9a57d9d442",
    },
  },
  "number": 1,
  "positions": [
    {
      "geometry": {
        "coordinates": [
          1,
          2,
        ],
        "type": "Point",
      },
      "type": "entrance",
    },
  ],
  "secondaryCommonToponymIDs": [
    "cccccccc-0000-4aaa-9000-1234567890cc",
    "cccccccc-1111-4aaa-9000-1234567890dd",
    "cccccccc-2222-4aaa-9000-1234567890ee",
  ],
  "updateDate": 2021-01-01T00:00:00.000Z,
}
`;

exports[`balAddrToBanAddr > should return BanAddress with BanTopoID 1`] = `
{
  "certified": true,
  "districtID": undefined,
  "id": undefined,
  "mainCommonToponymID": "bbbbbbbb-0000-4aaa-9000-1234567890bb",
  "meta": {
    "idfix": {
      "hash": "301cb59faadb7ef5fe8c877dfbf0923c",
    },
  },
  "number": 1,
  "positions": [
    {
      "geometry": {
        "coordinates": [
          1,
          2,
        ],
        "type": "Point",
      },
      "type": "entrance",
    },
  ],
  "secondaryCommonToponymIDs": undefined,
  "updateDate": 2021-01-01T00:00:00.000Z,
}
`;

exports[`balAddrToBanAddr > should return BanAddress with multiple positions 1`] = `
{
  "certified": true,
  "districtID": "dddddddd-0000-4aaa-9000-1234567890ff",
  "id": "aaaaaaaa-0000-4aaa-9000-1234567890aa",
  "mainCommonToponymID": "bbbbbbbb-0000-4aaa-9000-1234567890bb",
  "meta": {
    "idfix": {
      "hash": "40dcdc9e0035670c043d043508f5175f",
    },
  },
  "number": 1,
  "positions": [
    {
      "geometry": {
        "coordinates": [
          1,
          2,
        ],
        "type": "Point",
      },
      "type": "entrance",
    },
    {
      "geometry": {
        "coordinates": [
          3,
          4,
        ],
        "type": "Point",
      },
      "type": "other",
    },
  ],
  "secondaryCommonToponymIDs": [
    "cccccccc-0000-4aaa-9000-1234567890cc",
    "cccccccc-1111-4aaa-9000-1234567890dd",
    "cccccccc-2222-4aaa-9000-1234567890ee",
  ],
  "updateDate": 2021-01-01T00:00:00.000Z,
}
`;

exports[`balAddrToBanAddr > should return BanAddress without BanID & BanTopoID 1`] = `
{
  "certified": true,
  "districtID": undefined,
  "id": undefined,
  "mainCommonToponymID": undefined,
  "meta": {
    "idfix": {
      "hash": "2bf856e5d03016e4f88548f656a44190",
    },
  },
  "number": 1,
  "positions": [
    {
      "geometry": {
        "coordinates": [
          1,
          2,
        ],
        "type": "Point",
      },
      "type": "entrance",
    },
  ],
  "secondaryCommonToponymIDs": undefined,
  "updateDate": 2021-01-01T00:00:00.000Z,
}
`;
